call button, copy button and clear button functionalities added

--- a/style/style.css
+++ b/style/style.css
@@ -7,3 +7,8 @@
 .hind-madurai-light {
   font-family: "Hind Madurai", sans-serif;
 }
+/* google font roboto */
+
+.roboto-font {
+  font-family: "Roboto", sans-serif;
+}
